app/assets/stylesheets/home.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.page-container {
  display: flex;
  flex-direction: column;
  height: 100vh;

  .top-section {
    background: url("number_plate.jpg");
    background-size: cover;
    height: 45vh;
    opacity: 0.9;

    @media (min-width: 992px)  {
      height: 60vh;
    }
  }

  .search-section {
    margin-top: 10vh;
  }

  .flash-messages {
    display: flex;
    justify-content: center;

    .alert {
      margin-top: 1rem;
      text-align: center;
      width: 85%;
    }
  }

  .header {
    color: white;
    margin-bottom: 2rem;
    text-align: center;
  }

  .search-box {
    display: flex;
    justify-content: center;

    #home_number_plate {
      border: 1px solid gray;
      padding: 0.6rem;
      width: 50vw;
      height: 8vh;
    }

    .search-button {
      background-color: #3A23B5;
      color: white;
      width: 12vh;
      height: 8vh;
    }
  }

  .help-section {
    margin-top: 1rem;

    * {
      margin-left: 1rem;
      margin-right: 1rem
    }

    .help-section-heading {
      color: #EB5062;
      padding-bottom: 1rem;
    }

    .help-section-content {
      border-bottom: 1px solid rgb(221, 221, 221);
      padding-bottom: 2rem;

      @media (min-width: 992px) {
        padding-bottom: 3rem;
      }
    }

    p {
      color: #6b7177;
      line-height: 2.3rem;
    }
  }
}

